--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,59 +3,23 @@
     "next/core-web-vitals",
     "airbnb-typescript",
     "airbnb/hooks",
+    "@feature-sliced",
+    "@feature-sliced/eslint-config/rules/import-order/experimental",
     "prettier"
   ],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "plugins": [
-    "@typescript-eslint",
-    "import"
-  ],
+  "parser": "@typescript-eslint/parser",
+  "settings": {
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true
+      }
+    }
+  },
+  "plugins": ["@typescript-eslint", "import"],
   "rules": {
-    "react/react-in-jsx-scope": "off",
-    "sort-imports": [
-      "warn",
-      {
-        "ignoreDeclarationSort": true
-      }
-    ],
-    "import/order": [
-      "warn",
-      {
-        "groups": [
-          "builtin",
-          "external",
-          "internal",
-          [
-            "sibling",
-            "parent",
-            "index"
-          ],
-          "object",
-          "type",
-          "unknown"
-        ],
-        "pathGroups": [
-          {
-            "pattern": "{react*,react*/**,next*,next*/**}",
-            "group": "external",
-            "position": "before"
-          },
-          {
-            "pattern": "{@/**}",
-            "group": "internal",
-            "position": "after"
-          }
-        ],
-        "warnOnUnassignedImports": true,
-        "pathGroupsExcludedImportTypes": [],
-        "alphabetize": {
-          "order": "asc",
-          "caseInsensitive": false
-        },
-        "newlines-between": "always"
-      }
-    ]
+    "react/react-in-jsx-scope": "off"
   }
 }
