--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,14 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "app": ["./src/app"],
+      "pages": ["./src/pages"],
+      "widgets": ["./src/widgets"],
+      "features/*": ["./src/features/*"],
+      "entities": ["./src/entities"],
+      "shared/*": ["./src/shared/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
