--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.23",
     "clsx": "^2.1.1",
     "next": "14.2.5",
     "react": "^18",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@feature-sliced/eslint-config": "^0.1.1",
+    "@tanstack/react-query-devtools": "^5.51.23",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
