Refactor: PD-18 variable 생성 후 폰트 적용

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,11 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "app": ["./src/app"],
-      "pages": ["./src/pages"],
-      "widgets": ["./src/widgets"],
+      "app/*": ["./src/app/*"],
+      "pages/*": ["./src/pages/*"],
+      "widgets/*": ["./src/widgets/*"],
       "features/*": ["./src/features/*"],
-      "entities": ["./src/entities"],
+      "entities": ["./src/entities/*"],
       "shared/*": ["./src/shared/*"]
     }
   },
