--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "airbnb/hooks",
     "@feature-sliced",
     "@feature-sliced/eslint-config/rules/import-order/experimental",
+    "plugin:storybook/recommended",
     "prettier"
   ],
   "parserOptions": {
