--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.8",
+    "msw": "^2.3.5",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
@@ -58,5 +59,10 @@
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
