--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.51.23",
     "clsx": "^2.1.1",
+    "lodash-es": "^4.17.21",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
@@ -32,6 +33,7 @@
     "@storybook/react": "^8.2.9",
     "@storybook/test": "^8.2.9",
     "@tanstack/react-query-devtools": "^5.51.23",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
