Fix: PD-46 워크플로우 시크릿 변수 이름 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         id: push_directory
         uses: cpina/github-action-push-to-another-repository@main
         env:
-          API_TOKEN_GITHUB: ${{ secrets.FRONT_AUTO_DEPLOY_ACTION }}
+          API_TOKEN_GITHUB: ${{ secrets.AUTO_DEPLOY_ACTION }}
         with:
           source-directory: 'output'
           destination-github-username: 'mina-gwak'
