--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@storybook/nextjs": "^8.2.9",
     "@storybook/react": "^8.2.9",
     "@storybook/test": "^8.2.9",
+    "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query-devtools": "^5.51.23",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
