Chore: PD-39 cva 내에서 클래스 정렬 가능하도록 설정 추가

--- a/.prettierrc
+++ b/.prettierrc
@@ -16,6 +16,9 @@
   ],
   "tailwindConfig": "./tailwind.config.ts",
   "tailwindFunctions": [
-    "clsx"
+    "clsx",
+    "cn",
+    "twmerge",
+    "cva"
   ]
 }
