--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -55,3 +55,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           message: "🚀storybook: ${{ steps.chromatic.outputs.storybookUrl }}"
+
+      - name: Discord Webhook
+        uses: tsickert/discord-webhook@v5.3.0
+        with:
+          webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          content: '🚀storybook: ${{ steps.chromatic.outputs.storybookUrl }}'
