--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "chromatic": "npx chromatic --project-token=chpt_823f3cf71c57001",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.23",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lodash-es": "^4.17.21",
     "next": "14.2.5",
     "react": "^18",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2"
   },
