Chore: 공통 UI가 수정될 때만 스토리북 배포

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -3,6 +3,8 @@ name: "Chromatic Deployment"
 on:
   pull_request:
     branches: [development]
+    paths:
+      - src/shared/ui/**
 
 jobs:
   chromatic-deploy:
