--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react": "^18",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
     "@commitlint/cli": "^19.3.0",
     "@feature-sliced/eslint-config": "^0.1.1",
+    "@hookform/devtools": "^4.3.1",
     "@storybook/addon-essentials": "^8.2.9",
     "@storybook/addon-interactions": "^8.2.9",
     "@storybook/addon-links": "^8.2.9",
