--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "pages/*": ["./src/pages/*"],
       "widgets/*": ["./src/widgets/*"],
       "features/*": ["./src/features/*"],
-      "entities": ["./src/entities/*"],
+      "entities/*": ["./src/entities/*"],
       "shared/*": ["./src/shared/*"]
     }
   },
