--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-toastify": "^10.0.6",
     "svg-country-flags": "^1.2.10",
     "tailwind-merge": "^2.5.2"
   },
