--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
+    "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.0",
     "react-toastify": "^10.0.6",
     "svg-country-flags": "^1.2.10",
