--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.53.0",
     "react-toastify": "^10.0.6",
     "svg-country-flags": "^1.2.10",
+    "swiper": "^11.2.1",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
