--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@react-google-maps/api": "^2.20.5",
     "@tanstack/react-query": "^5.51.23",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lodash-es": "^4.17.21",
+    "lucide-react": "^0.474.0",
     "next": "14.2.5",
     "react": "^18",
     "react-datepicker": "^7.4.0",
@@ -29,7 +34,8 @@
     "react-toastify": "^10.0.6",
     "svg-country-flags": "^1.2.10",
     "swiper": "^11.2.1",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
