--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
     "@commitlint/cli": "^19.3.0",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.20.0",
     "@feature-sliced/eslint-config": "^0.1.1",
     "@hookform/devtools": "^4.3.1",
     "@storybook/addon-essentials": "^8.2.9",
@@ -56,16 +58,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
     "chromatic": "^11.7.1",
-    "eslint": "^8",
+    "eslint": "^9.20.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-config-next": "14.2.5",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-config-next": "15.1.6",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-boundaries": "^4.2.2",
+    "eslint-plugin-fsd-lint": "^1.0.5",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-storybook": "^0.8.0",
     "husky": "^9.1.4",
@@ -76,7 +76,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "storybook": "^8.2.9",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "~5.5.4"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
