--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
