--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^19",
     "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.0",
+    "react-pdf": "^9.2.1",
     "react-toastify": "^10.0.6",
     "svg-country-flags": "^1.2.10",
     "swiper": "^11.2.1",
