Fix: PD-168 Auth.js 적용

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "widgets/*": ["./src/widgets/*"],
       "features/*": ["./src/features/*"],
       "entities/*": ["./src/entities/*"],
-      "shared/*": ["./src/shared/*"]
+      "shared/*": ["./src/shared/*"],
+      "auth": ["./src/auth"]
     },
     "target": "ES2017"
   },
