--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "next-auth": "5.0.0-beta.25",
+    "path-to-regexp": "^8.2.0",
     "react": "^19",
     "react-datepicker": "^7.4.0",
     "react-dom": "^19",
