--- a/package.json
+++ b/package.json
@@ -24,21 +24,18 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
-    "i18next": "^24.2.3",
-    "i18next-browser-languagedetector": "^8.0.4",
-    "i18next-resources-to-backend": "^1.2.1",
     "jspdf": "^2.5.2",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-auth": "5.0.0-beta.25",
+    "next-intl": "^4.0.2",
     "path-to-regexp": "^8.2.0",
     "react": "^19",
     "react-datepicker": "^7.4.0",
     "react-dom": "^19",
     "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.0",
-    "react-i18next": "^15.4.1",
     "react-pdf": "^9.2.1",
     "react-toastify": "^10.0.6",
     "svg-country-flags": "^1.2.10",
