--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@tanstack/react-query": "^5.51.23",
     "@vis.gl/react-google-maps": "^1.5.1",
@@ -76,7 +77,7 @@
     "eslint-plugin-boundaries": "^4.2.2",
     "eslint-plugin-fsd-lint": "^1.0.5",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-storybook": "^0.12.0",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.8",
     "msw": "^2.4.3",
