--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-auth": "5.0.0-beta.25",
     "next-intl": "^4.0.2",
     "path-to-regexp": "^8.2.0",
+    "pdf-lib": "^1.17.1",
     "react": "^19",
     "react-datepicker": "^7.4.0",
     "react-daum-postcode": "^3.2.0",
